# archlog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.json  config_handler.py  main.py  package-changelog-viewer.py  package-mapping.json  package_handler.py  pyproject.toml  requirements.txt  web_scraper.py
src/_resources/: config.json
src/archlog/: __main__.py  config_handler.py  logger.py  logger_manager.py  logic.py  package_handler.py  path_manager.py  web_scraper.py
src/archlog/_resources/: config.json
src/archlog/apis/: archlinux_api.py  github_api.py  gitlab_api.py
src/archlog/utils/: __init__.py  utils.py
tests/: test_closest_package_tag.py  test_extract_base_git_url.py  test_extract_upstream_url_nvchecker.py
tests/apis/: test_gitlab_extract_upstream_url_information.py
