[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "archlog"
version = "1.1"
description = "View and track Arch Linux package changelogs with version and upstream updates"
keywords = ["arch", "archlinux", "changelog", "packages", "pacman", "version-tracking", "linux", "tag"]
readme = "README.md"
authors = [
  { name="MystikReasons" },
]
maintainers = [
    { name = "MystikReasons" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.3",
    "httpx==0.28.1",
    "rapidfuzz==3.13.0",
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "flake8==7.3.0",
    "pytest==8.4.2",
]

[project.urls]
Homepage = "https://github.com/MystikReasons/archlog"
Documentation = "https://github.com/MystikReasons/archlog"
Repository = "https://github.com/MystikReasons/archlog.git"
Issues = "https://github.com/MystikReasons/archlog/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"archlog" = ["_resources/**/*"]

[project.scripts]
archlog = "archlog.__main__:main"